--- a/eraser.html
+++ b/eraser.html
@@ -9,6 +9,10 @@
   <title>about me</title>
 </head> 
 <body>
+  <audio id="myAudio" controls>
+    <source src="http://www.w3school.com.cn/i/horse.ogg" type="audio/ogg">
+    <source src="http://www.w3school.com.cn/i/horse.mp3" type="audio/mpeg">
+  </audio>
   <article class="container">
     <div class="m-eraser" id="fakemask">
       <canvas id="cas" class="cas invisible"></canvas>
